fix: improve M3U compatibility for APTV and fix docker backup permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "3000:3000"
     volumes:
       - ./data:/app/data
+      - ./backups:/app/backups
     environment:
       - DATABASE_URL=file:/app/data/db.sqlite
     deploy:
