重构: 优化项目结构，提升代码质量和可维护性
- 项目清理: 删除临时文件，优化配置文件
- 基础设施: 创建 hooks、utils、constants、services 层
- 类型系统: 完善 TypeScript 类型，移除所有 any 类型
- 组件优化: 重构主页使用自定义 hooks
- API 优化: 提取解析逻辑到服务层
- 文档更新: 完善 README 和项目结构说明

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,16 @@ next-env.d.ts
 *.db
 *.db-journal
 *.sqlite
+*.sqlite-journal
 /data/
 
 /app/generated/prisma
 dev_server.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
